<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightGreen"
    android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/task_add_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task_text"
        android:textSize="20sp"
        android:textColor="@color/darkGreen"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edittext_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/edittext_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="33dp"
        android:paddingEnd="104dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/add_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edttext_task_name" />

        <EditText
            android:id="@+id/add_task_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edttext_task_time" />

        <EditText
            android:id="@+id/add_task_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edttext_task_date" />

        <EditText
            android:id="@+id/add_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edttext_task_description" />
    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_title"
        android:textColor="@color/darkGreen"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_section"/>

</androidx.constraintlayout.widget.ConstraintLayout>